--- a/front/index.html
+++ b/front/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>filmes</title>
+    <title>Filmes</title>
 </head>
-<body>
+<body onload="obterFilmes()">
     <div class="container mt-5 ">
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -15,7 +15,7 @@
                     <thead>
                         <tr>
                             <th>Título</th>
-                            <th>Sinpse</th>
+                            <th>Sinopse</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios.dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
